[package]
name = "nosana_clockwork-thread-program"
version = "2.0.15"
description = "Clockwork thread program"
edition = "2021"
license = "AGPL-3.0-or-later"
homepage = "https://clockwork.xyz"
repository = "https://github.com/clockwork-xyz/clockwork"
documentation = "https://docs.clockwork.xyz"
readme = "./README.md"
keywords = ["solana"]

[lib]
crate-type = ["cdylib", "lib"]
name = "nosana_clockwork_thread_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.27.0"
chrono = { version = "0.4.19", default-features = false, features = ["alloc"] }
nosana_clockwork-cron = { path = "../../cron", version = "2.0.15" }
nosana_clockwork-network-program = { path = "../network", features = ["cpi"], version = "2.0.15" }
nosana_clockwork-thread-program-v1 = { path = "v1", version = "1.4.4" }
nosana_clockwork-utils = { path = "../../utils", version = "2.0.15" }
static-pubkey = "1.0.3"
version = "3.0.0"
