[package]
name = "nosana_clockwork-webhook-program"
version = "2.0.15"
description = "Clockwork webhook program"
edition = "2021"
license = "AGPL-3.0-or-later"
homepage = "https://clockwork.xyz"
repository = "https://github.com/clockwork-xyz/clockwork"
documentation = "https://docs.clockwork.xyz"
readme = "./README.md"
keywords = ["solana"]

[lib]
crate-type = ["cdylib", "lib"]
name = "nosana_clockwork_webhook_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { features = ["init-if-needed"], version = "0.27.0" }
nosana_clockwork-network-program = { path = "../network", features = ["cpi"], version = "2.0.15" }
nosana_clockwork-utils = { path = "../../utils", version = "2.0.15" }
serde = "1.0.152"
